--- a/club_side/club_Information.html
+++ b/club_side/club_Information.html
@@ -12,41 +12,8 @@
     <link rel="stylesheet" href="styles/sidebar.css">
 </head>
 <body>
-    <div class="header">
-        <div class="header-left">
-            <img class="hamburger-menu" src="icons/menu_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg">
-            <img class="club-logo" src="icons/ABKC logo.jpg">
-        </div>
-        <div class="header-center"> 
-            <input type="text" class="search-bar" id="searchInput" placeholder="Search...">
-            <button class="search-button">
-                <img class="search-icon" src="icons/search_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg">
-                <div class="tool-tip">Search</div>
-            </button>
-        </div>
-        <div class="header-right">
-            <div class = "create-trial-icon-container">
-                <img class="create-trial-icon" src="icons/pets_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg">
-                <div class = "tool-tip">Create trial</div>
-            </div>
-            <div class="logout-icon-container">
-                <img class="logout-icon" src="icons/logout_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg">
-                <div class = "tool-tip">Logout</div>
-            </div>
-        </div>
-    </div>
-    <div class="sidebar">
-        <div class="sidebar-link">Home</div>
-        <div class="sidebar-link">
-            <a href="members.html">Memberships</a>
-        </div>
-        <div class="sidebar-link">Shows & trials</div>
-        <div class="sidebar-link">Training activities</div>
-        <div class="sidebar-link">Financial reports</div>
-        <div class="sidebar-link">Club settings</div>
-        <!--<div class="sidebar-link"></div>
-        <div class="sidebar-link"></div>-->
-    </div>
+    <div id="header-container"></div>
+    <div id="sidebar-container"></div>
     <div>
         Club to view
         <input type="text" id="clubIdInput" placeholder="Enter Club ID">
@@ -62,6 +29,7 @@
 -->
 
     <script type="module" src="scripts/clubInformation.js" defer></script>
+    <script type="module" src="scripts/main.js"></script>
     <!--<script src="node_modules/@fancyapps/ui/dist/fancybox/fancybox.umd.js"></script>
     <script>
         // Initialize Fancybox
