--- a/club_side/members.html
+++ b/club_side/members.html
@@ -16,29 +16,7 @@
     <script src="https://cdnjs.cloudflare.com/ajax/libs/fancybox/3.5.7/jquery.fancybox.min.js"></script>
 </head>
 <body>
-    <div class="header">
-        <div class="header-left">
-            <img class="hamburger-menu" src="icons/menu_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg">
-            <img class="club-logo" src="icons/ABKC logo.jpg">
-        </div>
-        <div class="header-center"> 
-            <input type="text" class="search-bar" id="searchInput" placeholder="Search...">
-            <button class="search-button">
-                <img class="search-icon" src="icons/search_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg">
-                <div class="tool-tip">Search</div>
-            </button>
-        </div>
-        <div class="header-right">
-            <div class="create-trial-icon-container">
-                <img class="create-trial-icon" src="icons/pets_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg">
-                <div class="tool-tip">Create trial</div>
-            </div>
-            <div class="logout-icon-container">
-                <img class="logout-icon" src="icons/logout_24dp_5F6368_FILL0_wght400_GRAD0_opsz24.svg">
-                <div class="tool-tip">Logout</div>
-            </div>
-        </div>
-    </div>
+<div id="header-container"></div>
 <div id="sidebar-container"></div>
     <div>
         Club to view
